--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -21,5 +21,6 @@
     <found-items found-items="...." on-remove="...."></found-items>
   </div>
 
+  <script src="scripts/angular.min.js"></script>
 </body>
 </html>
