--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -1,26 +1,28 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app='NarrowItDownApp'>
   <head>
     <title>Narrow Down Your Menu Choice</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
-<body>
+<body ng-controller="NarrowItDownController as narrowItDown">
    <div class="container">
     <h1>Narrow Down Your Chinese Menu Choice</h1>
 
     <div class="form-group">
-      <input type="text" placeholder="search term" class="form-control">
+      <input type="text" placeholder="search term" class="form-control" ng-model="narrowItDown.searchTerm">
     </div>
     <div class="form-group narrow-button">
-      <button class="btn btn-primary">Narrow It Down For Me!</button>
+      <button class="btn btn-primary" ng-click="narrowItDown.search();">Narrow It Down For Me!</button>
     </div>
 
     <!-- found-items should be implemented as a component -->
-    <found-items found-items="...." on-remove="...."></found-items>
+    <found-items class="col-md-12" found="narrowItDown.found" on-remove="narrowItDown.removeItem(index)"></found-items>
   </div>
 
+
   <script src="scripts/angular.min.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
