--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -19,6 +19,17 @@
 
     <!-- found-items should be implemented as a component -->
     <found-items class="col-md-12" found="narrowItDown.found" on-remove="narrowItDown.removeItem(index)"></found-items>
+    
+    <div ng-if="narrowItDown.nothingFound();" class="col-md-12">
+      <div class="row">
+        <ul class="list-group">
+          <li class="list-group-item">
+            <div class="emptyMessage" role="alert">Nothing found</div>
+          </li>
+        </ul>
+      </div>
+    </div>
+
   </div>
 
 
